--- a/core/src/components/button/button.scss
+++ b/core/src/components/button/button.scss
@@ -44,7 +44,7 @@
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
-  letter-spacing: var(--letter-spacing);
+  letter-spacing: inherit;
   line-height: 1;
   text-decoration: none;
   text-overflow: ellipsis;
